fix: remove whitespace from dashboard container when displaying an embedded dashboard

--- a/src/components/styles/DashboardContainer.module.css
+++ b/src/components/styles/DashboardContainer.module.css
@@ -6,6 +6,11 @@
     overflow: auto;
     flex-grow: 1;
 }
+.container.embeddedDashboard {
+    padding-inline-start: 0;
+    padding-inline-end: 0;
+    padding-block-end: 0;
+}
 .contentWrap {
     display: flex;
     flex-direction: column;
